# Pocketbook-Nextcloud-Client

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  makearm.sh  pb.sh
src/: main.cpp
src/api/: fileBrowser.cpp  fileBrowser.h  fileModel.h  model.h  sqliteConnector.cpp  sqliteConnector.h  webDAV.cpp  webDAV.h  webDAVItemModel.h  webDAVModel.h
src/handler/: contextMenu.cpp  contextMenu.h  eventHandler.cpp  eventHandler.h  fileHandler.cpp  fileHandler.h  mainMenu.cpp  mainMenu.h  menuHandler.cpp  menuHandler.h
src/ui/: fileModel.h  listView.cpp  listView.h  listViewEntry.cpp  listViewEntry.h  loginView.cpp  loginView.h
src/ui/excludeFileView/: excludeFileView.cpp  excludeFileView.h
src/ui/fileView/: fileView.cpp  fileView.h  fileViewEntry.cpp  fileViewEntry.h
src/ui/listView/: listView.cpp  listView.h  listViewEntry.h
src/ui/loginView/: loginView.cpp  loginView.h
src/ui/webDAVView/: webDAVView.cpp  webDAVView.h  webDAVViewEntry.cpp  webDAVViewEntry.h
src/util/: item.cpp  item.h  log.cpp  log.h  nextcloud.cpp  nextcloud.h  util.cpp  util.h
